# make

./: .gitmodules  README.md
beepbeep/: README.md  flash-upython.sh
bring_up/: README.md
card_test/: README.md  boot.py  hardware.py  main.py  write_test.sh
cheepcheep/: .gitignore  CMakeLists.txt  README.md  cheepcheep.code-workspace  partitions_cheepcheep.csv  sdkconfig
cheepcheep/main/: CMakeLists.txt  device_config.h  device_creds.h.example  idf_component.yml  main.c
cheepcheep/main/bsp/: bsp.h  fs.c  fs.h  gpio.c  gpio.h  pindefs.h  sys.c  sys.h  time.c  time.h  uptime.c  uptime.h
cheepcheep/main/client/: client.c  client.h  dfu_client.c  dfu_client.h  msg.c  msg.h  net.c  net.h  ota_dfu.c  ota_dfu.h  ws.c  ws.h
cheepcheep/main/config/: config.c  config.h  config_defaults.c  config_defaults.h  config_types.h
cheepcheep/main/console/: console.c  console.h
cheepcheep/main/device/: device.h  device_door.c  device_door.h  device_interlock.c  device_interlock.h  device_type_api.h  device_vending.c  device_vending.h
cheepcheep/main/net/: net.c  net.h
cheepcheep/main/nvstate/: nvstate.c  nvstate.h
cheepcheep/main/signal/: signal.c  signal.h
cheepcheep/main/tags/: tags.c  tags.h
cheepcheep/main/util/: log.h  status.h
cheepcheep/main/wiegand/: wiegand.c  wiegand.h  wiegand_fmt.c  wiegand_fmt.h
test/: README.md  main.py  mainboard-firmware.code-workspace
wiegand-emulator/: CMakeLists.txt
wiegand-emulator/inc/: bsp.h  cmd.h
wiegand-emulator/src/: cmd.c  wiegand.c
wiegand_emulator/: CMakeLists.txt  README.md  emulator.c
wiegand_emulator/inc/: status.h
wiegand_sig_gen/: CMakeLists.txt  README.md  emulator.c
wiegand_sig_gen/inc/: wiegand.h
